<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F29100"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/poi"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="#FFF"
            android:text="@string/title_rutap"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:weightSum="2"
            >
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ico_distancia"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#F29100"
                android:layout_gravity="center"
                android:text="@string/label_distance"
                android:id="@+id/tvDistance" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            >
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@mipmap/ico_tiempo"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#F29100"
            android:text="@string/label_duration"
            android:id="@+id/tvDuration" />
            </LinearLayout>
    </LinearLayout>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="insertIntoDb"/>



</LinearLayout>
