<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/bottomf"

    tools:context="com.ut3.ehg.turismotepic.Login">


    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbRemenberme"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@mipmap/iniciar"
        android:id="@+id/btnLogin" />


    <CheckBox
        android:text="@string/title_recordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbRemenberme"
        android:textSize="13.1dp"
        android:layout_below="@+id/etPassLog"
        android:layout_alignStart="@+id/etPassLog"
        android:layout_toStartOf="@+id/tvRegistro"
        android:textColor="#0b0a0c"
        android:layout_alignEnd="@+id/etPassLog" />

    <EditText
        android:hint="Usuario"

        android:layout_width="300dp"
        android:background="@drawable/estilos"
        android:layout_centerInParent="true"
        android:layout_height="35dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:textColor="#ea5b0c"
        android:drawableLeft="@mipmap/user"
        android:layout_marginTop="80dp"
        android:id="@+id/etUsuarioLog"
        android:layout_below="@+id/ivLogo"
        android:drawablePadding="10dip"
        android:paddingLeft="16dp"
        />

    <EditText
        android:hint="Contraseña"
        android:background="@drawable/estilos"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="#ea5b0c"
        android:drawableLeft="@mipmap/pass"
        android:drawablePadding="10dip"
        android:paddingLeft="16dp"
        android:layout_marginTop="13dp"
        android:id="@+id/etPassLog"
        android:layout_below="@+id/etUsuarioLog"/>

    <TextView
        android:text="@string/btn_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRegistro"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#35a8e0"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <ImageView
        android:layout_width="274.5dp"
        android:layout_height="161.5dp"
        android:src="@mipmap/main_logo"
        android:id="@+id/ivLogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/title_login"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textColor="#442a19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:id="@+id/tvTitleLogin"
        android:gravity="center_horizontal"
        android:layout_above="@+id/etPassLog"
        android:layout_alignParentStart="true" />


</RelativeLayout>
